--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,7 +1,7 @@
 - hosts: all
   vars:
     WORKDIR: /data
-    SRCDIR: deployments
+    SRCDIR: hosts
   vars_files:
     - "variables.yaml"
   roles:
