--- a/roles/docker/tasks/main.yaml
+++ b/roles/docker/tasks/main.yaml
@@ -7,7 +7,8 @@
       - 'ca-certificates'
       - 'curl'
       - python3-docker
-    
+      - rsync
+
 - name: Add Docker GPG apt Key
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
@@ -17,7 +18,7 @@
   apt_repository:
     repo: "deb https://download.docker.com/linux/ubuntu {{ansible_distribution_release}} stable"
     state: present
-    
+
 - name: Update apt and install docker-ce
   apt:
     name: 
